k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
  namespace: springboot
  labels:
    app: service1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
        - name: service1
          image: harbor.aikoo.net/tanzu/service1:1.16
          ports:
            - containerPort: 8015
