k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: service1
  name: service1
  namespace: spring-boot-convention
spec:
  ports:
    - port: 8015
      protocol: TCP
      targetPort: 8015
  selector:
    app: service1
  type: ClusterIP
status:
  loadBalancer: {}
