k8s/http_proxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: service1
  namespace: springboot
spec:
  virtualhost:
    fqdn: service1.taskoo.net
  routes:
    - services:
        - name: service1
          port: 8015
